--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -274,6 +274,18 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  margin-top: 40px;
+  margin-top: 10px;
   text-align: right;
+}
+
+.monthItem {
+  display: flex;
+  flex-direction: row;
+}
+
+.days {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+  margin-left: 1em;
 }
